# windows.graphics.capture

./: CMakeLists.txt  CallbackImpl.c  CallbackImpl.h  DXGIMapping.cpp  DXGIMapping.h  FrameSender.cpp  FrameSender.h  IDirect3DDxgiInterfaceAccess.h  IIDUtils.c  IIDUtils.h  WindowsGraphicsCapture.cpp  WindowsGraphicsCapture.h  main.c  main.cpp  main.h  windows_graphics_capture.c  windows_graphics_capture.h
capture/: AbstractCapture.h  AbstractFrameProcessor.h  CaptureShared.h  D3D11Context.cpp  D3D11Context.h  DXGIMapping.cpp  DXGIMapping.h  FrameProcessor.cpp  FrameProcessor.h  FrameSender.cpp  FrameSender.h  WindowsGraphicsCapture.cpp  WindowsGraphicsCapture.h  main.cpp
capture/wdd/: DesktopDuplication.cpp  DesktopDuplication.h
capture/wgc/: WGCCapture.cpp  WGCCapture.h  windows_graphics_capture.c  windows_graphics_capture.h
display/: Display.cpp  Display.h  RenderTarget.cpp  RenderTarget.h  differ.frag  display.frag  display.vert
shared/: log_helper.c  log_helper.h  network.cpp  network.h  shared.h
wgc/: CallbackImpl.h  D3D11Context.cpp  D3D11Context.h  DXGIMapping.cpp  DXGIMapping.h  FrameSender.h  WGCCapture.h  WindowsGraphicsCapture.cpp  WindowsGraphicsCapture.h  windows_graphics_capture.c  windows_graphics_capture.h
